[gd_scene load_steps=34 format=3 uid="uid://b2vww2ct07iuh"]

[ext_resource type="Texture2D" uid="uid://bk333ger0fy3u" path="res://Art/Enemies/Gooey/gooey Idle.png" id="1_6po1y"]
[ext_resource type="Texture2D" uid="uid://keb504va1qjf" path="res://Art/Enemies/Gooey/gooey Crawl.png" id="2_0enxo"]
[ext_resource type="Texture2D" uid="uid://ddskdrivopjff" path="res://Art/Enemies/Gooey/gooey Dead.png" id="2_douph"]
[ext_resource type="Texture2D" uid="uid://t70a1d1qtddk" path="res://Art/Enemies/Gooey/gooey Knockback.png" id="3_nif0p"]
[ext_resource type="Script" path="res://States and Abstracts/gravity.gd" id="4_0rt8q"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/enemy_state_machine.gd" id="5_sopil"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/state_crawl.gd" id="6_7gcbu"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/state_idle.gd" id="6_xg211"]
[ext_resource type="Script" path="res://States and Abstracts/HitHurtBoxes/hurtbox.gd" id="7_wogyy"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/GooeyDamageable.gd" id="8_yyxbb"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/state_knockback.gd" id="9_6r7gw"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/state_dead.gd" id="11_g3jta"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6vfy"]
atlas = ExtResource("2_0enxo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smggc"]
atlas = ExtResource("2_0enxo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1tj4"]
atlas = ExtResource("2_0enxo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1r87"]
atlas = ExtResource("2_0enxo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnd2"]
atlas = ExtResource("2_douph")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_db77e"]
atlas = ExtResource("2_douph")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uktij"]
atlas = ExtResource("2_douph")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qi0m"]
atlas = ExtResource("2_douph")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scvry"]
atlas = ExtResource("2_douph")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohkyx"]
atlas = ExtResource("2_douph")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg02n"]
atlas = ExtResource("1_6po1y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dys3k"]
atlas = ExtResource("1_6po1y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v56cm"]
atlas = ExtResource("1_6po1y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16p36"]
atlas = ExtResource("1_6po1y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m6r8"]
atlas = ExtResource("3_nif0p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vngan"]
atlas = ExtResource("3_nif0p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoie6"]
atlas = ExtResource("3_nif0p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyv3e"]
atlas = ExtResource("3_nif0p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_53d71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6vfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smggc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1tj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1r87")
}],
"loop": true,
"name": &"crawl",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db77e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uktij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qi0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scvry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohkyx")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg02n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dys3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v56cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16p36")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m6r8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vngan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoie6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyv3e")
}],
"loop": true,
"name": &"knockback",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hnt6y"]
radius = 9.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gk1gw"]
radius = 13.0

[node name="Gooey" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_53d71")
animation = &"dead"
frame = 1
frame_progress = 0.161547

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 4)
shape = SubResource("CapsuleShape2D_hnt6y")

[node name="RayCast_Left" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCast_Right" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 2

[node name="Gravity" type="Node" parent="." node_paths=PackedStringArray("character_body", "sprite")]
script = ExtResource("4_0rt8q")
character_body = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="GooeyDamageable" type="Node" parent="."]
script = ExtResource("8_yyxbb")

[node name="Timer" type="Timer" parent="GooeyDamageable"]
one_shot = true

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character", "sprite")]
script = ExtResource("5_sopil")
initial_state = NodePath("Idle")
character = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="Idle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_xg211")
first_anim_name = "idle"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Idle"]
wait_time = 1.5
one_shot = true

[node name="Crawl" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_7gcbu")
first_anim_name = "crawl"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Crawl"]
wait_time = 3.0
one_shot = true

[node name="Knockback" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_6r7gw")
first_anim_name = "knockback"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Knockback"]
wait_time = 0.5
one_shot = true

[node name="Dead" type="Node" parent="EnemyStateMachine"]
script = ExtResource("11_g3jta")
first_anim_name = "dead"

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("7_wogyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_gk1gw")
debug_color = Color(0.890196, 0.258824, 0.505882, 0.419608)

[connection signal="timeout" from="GooeyDamageable/Timer" to="Gravity" method="_on_timer_timeout"]
[connection signal="timeout" from="GooeyDamageable/Timer" to="GooeyDamageable" method="_on_timer_timeout"]
[connection signal="interrupt_state" from="EnemyStateMachine" to="Gravity" method="_on_enemy_state_machine_interrupt_state"]
[connection signal="timeout" from="EnemyStateMachine/Idle/Timer" to="EnemyStateMachine/Idle" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Crawl/Timer" to="EnemyStateMachine/Idle" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Crawl/Timer" to="EnemyStateMachine/Crawl" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Knockback/Timer" to="EnemyStateMachine/Knockback" method="_on_timer_timeout"]
